# sync-break-ultimate

./: .gitignore  LICENSE  README.MD  README_RU.MD  analyzer.py  effects.py  engine.py  engine_test.py  gui.py  requirements.txt  rt.py  rt_audio.py  rt_engine.py  rt_gui.py
.github/workflows/: python-app.yml
presets/: rt_blank.json
rt_cpp/: CMakeLists.txt  vcpkg.json
rt_cpp/src/: main.cpp
rt_cpp/src/audio/: audio_analyzer.cpp  audio_analyzer.h
rt_cpp/src/effects/: effect_chain.cpp  effect_chain.h
rt_cpp/src/effects/shaders/: canvas_place.frag  fractal_noise.frag
rt_cpp/src/engine/: rt_engine.cpp  rt_engine.h
rt_cpp/src/gui/: font_loader.cpp  font_loader.h  output_window.cpp  output_window.h  rt_gui.cpp  rt_gui.h  theme.cpp  win95.cpp  win95.h
rt_cpp/src/video/: video_pool.cpp  video_pool.h  video_source.cpp  video_source.h
tests/: conftest.py  test_analyzer.py  test_effects.py  test_encoders.py  test_engine.py  test_hw_fallback.py  test_hw_smoke.py  test_mystery.py  test_render_config.py  test_render_regression.py  test_rt_audio.py  test_sink_command.py  test_source_cache.py
tools/: bench_render.py  pyi_rth_inner_dll_libs.py
tools/pyi_hooks/: hook-av.py  hook-numpy.py  hook-scipy.py  hook-sklearn.py
vpc/: __main__.py  gui.py  mystery.py
vpc/render/: config.py  encoders.py  engine.py  engine_setup.py  quality.py  sink.py  source.py
